Ajuste no status de retorno. Implementação de rascunho para limite diário de postagem do tumblr.
