# src/routes/threadsRoutes.ts
@@ -4,7 +4,7 @@ import * as Sentry from '@sentry/node';
 import { protect } from '../middleware/authMiddleware';
 import { uploadImage } from '../services/cloudinaryService';
 import { ThreadsApiError, ThreadsAuthenticatedApiClient } from '@libs/threads-graph-api/index.js';
-import { toTitleCase } from '../utils/texts.js';
+import { toTitleCase } from '../utils/texts';
 import { BASE_DOCUMENT, db } from '../services/firebaseService';
 
 const router = Router();
@@ -214,16 +214,13 @@ export async function handleThreadsPost(options: ThreadsPostOptions) {
  *            instanceId: "asdffasdfFMaxwBvUw49LOjc2"
  *            postId: "153"
  *    responses:
- *      '201':
+ *      '200':
  *        description: Post criado com sucesso.
  */
 router.post('/post', protect, async (req: Request, res: Response) => {
-    const { instanceId, postId } = req.body;
-    const dbRef = (instanceId && postId) ? db.ref(`${BASE_DOCUMENT}/${instanceId}/${postId}`) : null;
-
     try {
         const result = await handleThreadsPost(req.body);
-        res.status(201).json({ message: 'Post criado com sucesso!', ...result });
+        res.status(200).json({ message: 'Post criado com sucesso!', ...result });
     } catch (error: any) {
         res.status(500).json({ message: error.message || 'Erro ao postar no Threads.' });
     }
